# com.github.zhaozg-lua-openssl

./: CMakeLists.txt  build_artifact.py  dependency-log-lua5.4.xml
.github/workflows/: main.yml
cmake/tests/: mingw_dll_dependencies.py
jonchki/: jonchkicfg.xml  jonchkihere.py
lua-openssl/: CMakeLists.txt  __README__.txt
lua-openssl/installer/lua5.4/: lua-openssl.xml
lua-openssl/patches/: 001_use_lua_and_libressl_modules.diff
